package sits.core;

public interface Action {
    String getLabel();
}
